Drop the PHP mirror; go directly to php.net

--- a/7.2/Dockerfile
+++ b/7.2/Dockerfile
@@ -11,8 +11,6 @@ LABEL description="nginx + php image based on Alpine" \
       php_version="PHP v$PHP_VER built from source" \
       nginx_version="nginx v$NGINX_VER built from source"
 
-ARG PHP_MIRROR=http://ch1.php.net
-
 ARG NGINX_CONF=" \
     --prefix=/nginx \
     --sbin-path=/usr/local/sbin/nginx \
@@ -153,11 +151,11 @@ RUN NB_CORES=${BUILD_CORES-$(getconf _NPROCESSORS_CONF)} \
     ${CUSTOM_PKGS} \
 
 ### Source downloading
- && wget http://nginx.org/download/nginx-${NGINX_VER}.tar.gz -O /tmp/nginx-${NGINX_VER}.tar.gz \
- && wget http://nginx.org/download/nginx-${NGINX_VER}.tar.gz.asc -O /tmp/nginx-${NGINX_VER}.tar.gz.asc \
- && wget ${PHP_MIRROR}/get/php-${PHP_VER}.tar.gz/from/this/mirror -O /tmp/php-${PHP_VER}.tar.gz \
- && wget ${PHP_MIRROR}/get/php-${PHP_VER}.tar.gz.asc/from/this/mirror -O /tmp/php-${PHP_VER}.tar.gz.asc \
- && wget http://ftp.gnu.org/pub/gnu/libiconv/libiconv-${LIBICONV_VERSION}.tar.gz -O /tmp/libiconv-${LIBICONV_VERSION}.tar.gz \
+ && wget https://nginx.org/download/nginx-${NGINX_VER}.tar.gz -O /tmp/nginx-${NGINX_VER}.tar.gz \
+ && wget https://nginx.org/download/nginx-${NGINX_VER}.tar.gz.asc -O /tmp/nginx-${NGINX_VER}.tar.gz.asc \
+ && wget https://www.php.net/distributions/php-${PHP_VER}.tar.gz -O /tmp/php-${PHP_VER}.tar.gz \
+ && wget https://www.php.net/distributions/php-${PHP_VER}.tar.gz.asc -O /tmp/php-${PHP_VER}.tar.gz.asc \
+ && wget https://ftp.gnu.org/pub/gnu/libiconv/libiconv-${LIBICONV_VERSION}.tar.gz -O /tmp/libiconv-${LIBICONV_VERSION}.tar.gz \
  && mkdir -p /php/conf.d \
  && mkdir -p /usr/src \
  && tar xzf /tmp/nginx-${NGINX_VER}.tar.gz -C /usr/src \
