Fixup empty continuation warning.  Will become error

--- a/7.2/Dockerfile
+++ b/7.2/Dockerfile
@@ -119,8 +119,7 @@ COPY rootfs /
 RUN NB_CORES=${BUILD_CORES-$(getconf _NPROCESSORS_CONF)} \
 
 ### Packages installation
- && BUILD_DEPS=" \
-    linux-headers \
+ && BUILD_DEPS="linux-headers \
     libtool \
     build-base \
     pcre-dev \
